--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 JWT_SECRET=imistatitum
-PORT=3000
-DB_HOST='localhost'
-DB_USERNAME='root'
-DB_PASSWORD=''
-DB_NAME='interpolice'
+PORT = 3000
+DB_HOST = 'bd5xgs7wwcdlqziqtp5l-mysql.services.clever-cloud.com'
+DB_USERNAME = 'u7eye6pjtkisqkyi'
+DB_PASSWORD = 'BmI1XwZGTOh8rNxI1oD8'
+DB_NAME = 'bd5xgs7wwcdlqziqtp5l'
